tests/integration/features/source_code_traceability/_validation/04_relation_marker_has_duplicate_uid_python/test.itest
# @relation(SDOC-SRS-139, scope=file)

RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail
CHECK: error: @relation marker contains duplicate node UIDs: ['REQ-001'].
